edited logo blog post, fixed spacing in blog cta

--- a/_sass/_blog_styling.scss
+++ b/_sass/_blog_styling.scss
@@ -115,5 +115,6 @@
   letter-spacing: 1px;
   color: $text-color;
   line-height: 1.4rem;
+  padding-top: 0rem;
   }
 }
